// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (1) 1`] = `
<gux-date-beta datetime="2022-07-07T13:35:30.100Z" format="short">
  <mock:shadow-root>
    7/7/22
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (2) 1`] = `
<gux-date-beta datetime="2022-07-07T13:35:30.100Z" format="medium">
  <mock:shadow-root>
    Jul 7, 2022
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (3) 1`] = `
<gux-date-beta datetime="2022-07-07T13:35:30.100Z" format="full">
  <mock:shadow-root>
    Thursday, July 7, 2022
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (4) 1`] = `
<gux-date-beta datetime="2022-07-07T13:35:30.100Z" format="long">
  <mock:shadow-root>
    July 7, 2022
  </mock:shadow-root>
</gux-date-beta>
`;
